--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,3 +16,18 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+
+  fonts:
+    - family: hafs
+      fonts:
+        - asset: assets/fonts/hafs/UthmanicHafs1 Ver13.otf
+    - family: dubai
+      fonts:
+        - asset: assets/fonts/dubai/Dubai-Light.ttf
+          weight: 300
+        - asset: assets/fonts/dubai/Dubai-Regular.ttf
+          weight: 400
+        - asset: assets/fonts/dubai/Dubai-Medium.ttf
+          weight: 500
+        - asset: assets/fonts/dubai/Dubai-Bold.ttf
+          weight: 700
